--- a/index.html
+++ b/index.html
@@ -4,17 +4,60 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
    <link rel="stylesheet" href="/style/sandstone_theme.css">
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
    <script src="script.js"></script>
 
    <title>Calculator</title>
 </head>
-<body>
-   <h1 class="m-auto">Calculator, <small>   Developed by <a href="https://github.com/DevDanWillian/">DevDanWillian</a></small></h1>
-   
-   <div class="col-8">
-      <div id="screen" class="col-8"></div>
+<body class="text-bg-primary">
+   <div class="container">
+   <header class="col-md mt-5 pb-3">
+      <h1 id="title" class="text-center fw-bolder"> Calculator, 
+         <small class="fs-6 m-1">Developed by <a href="https://github.com/DevDanWillian/">DevDanWillian</a></small>
+      </h1>
+   </header>
+
+
+
+   <div class="col-5 container border rounded-4 bg-dark">
+      <div id="screen" class="col border border-warning rounded-4 border-5 mt-2 mb-2 text-bg-success pt-2 pb-2 p-5 m-auto text-end fs-1 m-1">&nbsp</div>
+
+      <div id="buttonsMath" class="pb-5 container col container">
+         <div class="d-flex flex-wrap justify-content-center p-1" id="rowBtn1">
+            <div class="btn btn-sm btn-info p-4 fs-5 m-1" id="calcBtnParentesis">( )</div>
+            <div class="btn btn-sm btn-info p-4 fs-5 m-1" id="calcBtnPorcentagem">%</div>
+            <div class="btn btn-sm btn-info p-4 fs-5 m-1" id="calcBtnC">C</div>
+            <div class="btn btn-sm btn-info p-4 fs-5 m-1" id="calcBtnDiv">/</div>
+         </div>
+         <div class="d-flex flex-wrap justify-content-center p-1" id="rowBtn2">
+            <div class="btn btn-sm btn-info p-4 fs-5 m-1 "id="calcBtn7">7</div>
+            <div class="btn btn-sm btn-info p-4 fs-5 m-1 "id="calcBtn8">8</div>
+            <div class="btn btn-sm btn-info p-4 fs-5 m-1 "id="calcBtn9">9</div>
+            <div class="btn btn-sm btn-info p-4 fs-5 m-1" id="calcBtnMult">x</div>
+         </div>
+         <div class="d-flex flex-wrap justify-content-center p-1" id="rowBtn3">
+            <div class="btn btn-sm btn-info p-4 fs-5 m-1 "id="calcBtn4">4</div>
+            <div class="btn btn-sm btn-info p-4 fs-5 m-1 "id="calcBtn5">5</div>
+            <div class="btn btn-sm btn-info p-4 fs-5 m-1 "id="calcBtn6">6</div>
+            <div class="btn btn-sm btn-info p-4 fs-5 m-1" id="calcBtnMenos">-</div>
+         </div>
+         <div class="d-flex flex-wrap justify-content-center p-1" id="rowBtn4">
+            <div class="btn btn-sm btn-info p-4 fs-5 m-1" id="calcBtn1">1</div>
+            <div class="btn btn-sm btn-info p-4 fs-5 m-1" id="calcBtn2">2</div>
+            <div class="btn btn-sm btn-info p-4 fs-5 m-1" id="calcBtn3">3</div>
+            <div class="btn btn-sm btn-info p-4 fs-5 m-1" id="calcBtnMais">+</div>
+         </div>
+         <div class="d-flex flex-wrap justify-content-center p-1" id="rowBtn5">
+            <div class="btn btn-sm btn-info p-4 fs-5 m-1" id="calcBtn.">.</div>
+            <div class="btn btn-sm btn-info p-4 fs-5 m-1" id="calcBtn2">0</div>
+            <div class="btn btn-sm btn-info p-4 fs-5 m-1" id="calcBtnMm">±</div>
+            <div class="btn btn-sm btn-info p-4 fs-5 m-1" id="calcBtnIgual">=</div>
+         </div>
+      </div>
    </div>
+
+</div>
 </body>
 </html>
