+ and - wonking +- well haha

--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
    <div class="col-md-9 col-lg-8 col-xl-7 col-xxl-6 container border rounded-4 bg-dark bg-opacity-50">
 
       <input id="hist" class="border border-warning rounded-4 border-5 mt-3 mb-1 text-bg-info p-1 m-5  m-auto text-end fs-6 d-flex bg-opacity-50" onkeydown="preventKeyboardInput(event)">
+      
+      <input id="res" class="border border-warning rounded-4 border-5 text-bg-success p-1 m-auto text-end fs-3 d-flex bg-opacity-50" onkeydown="preventKeyboardInput(event)" value="0">
 
-      <input id="tela" class="border border-warning rounded-4 border-5 mt-3 mb-2 text-bg-success pt-2 pb-2 m-auto text-end fs-1 d-flex justify-content-around bg-opacity-100" type="number" onkeydown="preventKeyboardInput(event)">
+      <input id="tela" class="border border-warning rounded-4 border-5 mt-3 mb-2 text-bg-success m-auto text-end fs-1 d-flex justify-content-around bg-opacity-100" type="number" onkeydown="preventKeyboardInput(event)">
 
-      <input id="res" class="border border-warning rounded-4 border-5 mt-3 mb-1 text-bg-success p-1 m-5  m-auto text-end fs-6 d-flex bg-opacity-50" type="number" onkeydown="preventKeyboardInput(event)">
+
 
       <div id="buttonsMath" class="">
          <div class="d-flex justify-content-center p-1" id="rowBtn1">
