--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   }
 }
    </style>
-
+<script src="script.js" async></script>
    <title>Calculator</title>
 </head>
 <body class="text-bg-primary">
@@ -74,8 +74,6 @@
          </div>
       </div>
    </div>
-
 </div>
 </body>
 </html>
-<script src="script.js"></script>
