--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <input id="hist" class="border border-warning border-opacity-50 rounded-4 border-5 mt-3 text-bg-info p-1 m-5  m-auto text-end fs-6 d-flex bg-opacity-50 col-12" onkeydown="preventKeyboardInput(event)" step=".01">
       
-      <input id="tela" class="border border-warning rounded-4 border-5 border-opacity-75 mt-3 mb-2 text-bg-success m-auto text-end fs-1 d-flex justify-content-center  col-12" step=".01" onkeydown="preventKeyboardInput(event)" type="number">
+      <input id="tela" class="border border-warning rounded-4 border-5 border-opacity-75 mt-3 mb-2 text-bg-success m-auto text-end fs-1 d-flex justify-content-center  col-12" step=".01"  type="number">
 
       <input id="res" class="border border-warning rounded-4 border-5 border-opacity-75 text-bg-success p-1 m-auto text-end fs-3 d-flex bg-opacity-50 col-12 mb-3 bg-opacity-75" onkeydown="preventKeyboardInput(event)" value="0" step=".01" type="number">
 
